--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,20 +1,33 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_017_verifyIsSelected</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_013_verifyRefresh</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_015_verifyWebElementCommands</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_012_verifyNavigateTo</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_027_verifyDoubleClick</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_005_verifyNewToursRegistrationI</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_005_verifyDemoWebShopLoginPage</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_010_verifyInstantDemoRequestForm</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_008_verifySuccessfulFormSubmission</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_019_verifyTheMessageDisplayedInNewTab</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_006_verifyEmptyFieldValidation</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_007_verifyEmptyStateAndZipCode</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_001_verifyObsquraTitle</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_016_verifyIsDisplayed</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_009_verifyNewsLetterSubscribtionUsingCssSelector</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_004_verifyLocators</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_025_verifyTextInAFrame</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_029_verifyDragAndDrop</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_014_verifyForwardAndBackwardNavigation</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_020_verifyTheMessageDisplayedInNewWindow</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_011_verifyQuitAndClose</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_002_verifySingleInputFieldMessage</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_021_verifyTheMessageDisplayedInNewWindowMessage</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_017_verifyIsSelected</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_013_verifyRefresh</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_023_verifyConfirmAlert</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_015_verifyWebElementCommands</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_028_verifyMouseHover</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_005_verifyDemoWebShopLoginPage</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_010_verifyInstantDemoRequestForm</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_024_verifyPromptAlert</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_022_verifySimpleAlert</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_018_verifyIsEnabled</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_016_verifyIsDisplayed</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_009_verifyNewsLetterSubscribtionUsingCssSelector</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_026_verifyRightClick</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_004_verifyLocators</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_030_verifyDragAndDropByOffset</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_003_verifyTwoInputFieldMessage</td></tr>
 </table>
