--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\hi\AppData\Local\Temp\testng-eclipse-1874260494\testng-customsuite.xml</span>
+                    <span>C:\Users\hi\AppData\Local\Temp\testng-eclipse--1382221810\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="SeleniumBasicCommands.SeleniumCommands" hash-for-method="TC_018_verifyIsEnabled">TC_018_verifyIsEnabled</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="SeleniumBasicCommands.SeleniumCommands" hash-for-method="TC_031_verifyDragableItems">TC_031_verifyDragableItems</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +127,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_018_verifyIsEnabled">
-                  </a> <!-- TC_018_verifyIsEnabled -->
-                  <span class="method-name">TC_018_verifyIsEnabled</span>
+                  <a name="TC_031_verifyDragableItems">
+                  </a> <!-- TC_031_verifyDragableItems -->
+                  <span class="method-name">TC_031_verifyDragableItems</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\hi\AppData\Local\Temp\testng-eclipse-1874260494\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\hi\AppData\Local\Temp\testng-eclipse--1382221810\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -148,7 +148,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;SeleniumBasicCommands.SeleniumCommands&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;TC_018_verifyIsEnabled&quot;/&gt;
+          &lt;include name=&quot;TC_031_verifyDragableItems&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- SeleniumBasicCommands.SeleniumCommands --&gt;
     &lt;/classes&gt;
@@ -192,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_018_verifyIsEnabled')
+data.setCell(0, 1, 'TC_031_verifyDragableItems')
 data.setCell(0, 2, 'SeleniumBasicCommands.SeleniumCommands')
-data.setCell(0, 3, 2835);
+data.setCell(0, 3, 4914);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -214,27 +214,21 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">18 ignored methods</span>
+            <span class="header-content">31 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">SeleniumBasicCommands.SeleniumCommands</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">TC_017_verifyIsSelected</span>
-                <br/>
-                <span class="ignored-method-name">TC_013_verifyRefresh</span>
-                <br/>
-                <span class="ignored-method-name">TC_015_verifyWebElementCommands</span>
-                <br/>
                 <span class="ignored-method-name">TC_012_verifyNavigateTo</span>
+                <br/>
+                <span class="ignored-method-name">TC_027_verifyDoubleClick</span>
                 <br/>
                 <span class="ignored-method-name">TC_005_verifyNewToursRegistrationI</span>
                 <br/>
-                <span class="ignored-method-name">TC_005_verifyDemoWebShopLoginPage</span>
-                <br/>
-                <span class="ignored-method-name">TC_010_verifyInstantDemoRequestForm</span>
-                <br/>
                 <span class="ignored-method-name">TC_008_verifySuccessfulFormSubmission</span>
+                <br/>
+                <span class="ignored-method-name">TC_019_verifyTheMessageDisplayedInNewTab</span>
                 <br/>
                 <span class="ignored-method-name">TC_006_verifyEmptyFieldValidation</span>
                 <br/>
@@ -242,17 +236,49 @@ return data;
                 <br/>
                 <span class="ignored-method-name">TC_001_verifyObsquraTitle</span>
                 <br/>
-                <span class="ignored-method-name">TC_016_verifyIsDisplayed</span>
+                <span class="ignored-method-name">TC_025_verifyTextInAFrame</span>
                 <br/>
-                <span class="ignored-method-name">TC_009_verifyNewsLetterSubscribtionUsingCssSelector</span>
-                <br/>
-                <span class="ignored-method-name">TC_004_verifyLocators</span>
+                <span class="ignored-method-name">TC_029_verifyDragAndDrop</span>
                 <br/>
                 <span class="ignored-method-name">TC_014_verifyForwardAndBackwardNavigation</span>
+                <br/>
+                <span class="ignored-method-name">TC_020_verifyTheMessageDisplayedInNewWindow</span>
                 <br/>
                 <span class="ignored-method-name">TC_011_verifyQuitAndClose</span>
                 <br/>
                 <span class="ignored-method-name">TC_002_verifySingleInputFieldMessage</span>
+                <br/>
+                <span class="ignored-method-name">TC_021_verifyTheMessageDisplayedInNewWindowMessage</span>
+                <br/>
+                <span class="ignored-method-name">TC_017_verifyIsSelected</span>
+                <br/>
+                <span class="ignored-method-name">TC_013_verifyRefresh</span>
+                <br/>
+                <span class="ignored-method-name">TC_023_verifyConfirmAlert</span>
+                <br/>
+                <span class="ignored-method-name">TC_015_verifyWebElementCommands</span>
+                <br/>
+                <span class="ignored-method-name">TC_028_verifyMouseHover</span>
+                <br/>
+                <span class="ignored-method-name">TC_005_verifyDemoWebShopLoginPage</span>
+                <br/>
+                <span class="ignored-method-name">TC_010_verifyInstantDemoRequestForm</span>
+                <br/>
+                <span class="ignored-method-name">TC_024_verifyPromptAlert</span>
+                <br/>
+                <span class="ignored-method-name">TC_022_verifySimpleAlert</span>
+                <br/>
+                <span class="ignored-method-name">TC_018_verifyIsEnabled</span>
+                <br/>
+                <span class="ignored-method-name">TC_016_verifyIsDisplayed</span>
+                <br/>
+                <span class="ignored-method-name">TC_009_verifyNewsLetterSubscribtionUsingCssSelector</span>
+                <br/>
+                <span class="ignored-method-name">TC_026_verifyRightClick</span>
+                <br/>
+                <span class="ignored-method-name">TC_004_verifyLocators</span>
+                <br/>
+                <span class="ignored-method-name">TC_030_verifyDragAndDropByOffset</span>
                 <br/>
                 <span class="ignored-method-name">TC_003_verifyTwoInputFieldMessage</span>
                 <br/>
@@ -272,12 +298,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">TC_018_verifyIsEnabled</span>
-                <span class="method-start">5447 ms</span>
+                <span class="method-name">TC_031_verifyDragableItems</span>
+                <span class="method-start">7458 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">8298 ms</span>
+                <span class="method-start">12385 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
